# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
ohos_shared_library("sms") {
  include_dirs = [
    "//third_party/node/src",
    "include",
    "$SUBSYSTEM_DIR/sms_mms/frameworks/native/include",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/innerkits",
    "$SUBSYSTEM_DIR/sms_mms/services/include",
    "$SUBSYSTEM_DIR/sms_mms/services/include/gsm",
    "$SUBSYSTEM_DIR/sms_mms/services/include/cdma",
    "$SUBSYSTEM_DIR/sms_mms/utils",
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
    "//base/telephony/core_service/interfaces/innerkits/network_search",
    "//base/telephony/core_service/interfaces/innerkits/core",
    "//base/telephony/core_service/interfaces/innerkits/sim",
    "//base/telephony/core_service/interfaces/innerkits/core",
    "//base/telephony/core_service/interfaces/innerkits/network_search",
    "//base/telephony/core_service/interfaces/innerkits/cellular_data",
    "//base/telephony/core_service/interfaces/innerkits/sim",
  ]

  sources = [
    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi/napi_util.cpp",
    "src/delivery_callback.cpp",
    "src/napi_sms.cpp",
    "src/send_callback.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/sms_mms:tel_sms_mms",
    "$SUBSYSTEM_DIR/sms_mms/frameworks/native:tel_sms_mms_api",
    "//base/telephony/core_service:tel_core_service",
    "//base/telephony/core_service/utils:libtelephony_common",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SMS_MMS_API\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "ril_adapter:hril_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  relative_install_dir = "module/telephony"
  part_name = "sms_mms"
  subsystem_name = "telephony"
}
