# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/sms_mms/frameworks/native/mms"

config("mms_native_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "$SOURCE_DIR/include",
    "$SOURCE_DIR/include/utils",
    "//base/telephony/sms_mms/interfaces/innerkits",
  ]
}

ohos_source_set("mms_native_source") {
  sources = [
    "$SOURCE_DIR/src/mms_address.cpp",
    "$SOURCE_DIR/src/mms_attachment.cpp",
    "$SOURCE_DIR/src/mms_body.cpp",
    "$SOURCE_DIR/src/mms_body_part.cpp",
    "$SOURCE_DIR/src/mms_body_part_header.cpp",
    "$SOURCE_DIR/src/mms_buffer.cpp",
    "$SOURCE_DIR/src/mms_content_param.cpp",
    "$SOURCE_DIR/src/mms_content_type.cpp",
    "$SOURCE_DIR/src/mms_decode_buffer.cpp",
    "$SOURCE_DIR/src/mms_encode_buffer.cpp",
    "$SOURCE_DIR/src/mms_encode_string.cpp",
    "$SOURCE_DIR/src/mms_header.cpp",
    "$SOURCE_DIR/src/mms_header_categ.cpp",
    "$SOURCE_DIR/src/mms_msg.cpp",
    "$SOURCE_DIR/src/utils/mms_base64.cpp",
    "$SOURCE_DIR/src/utils/mms_charset.cpp",
    "$SOURCE_DIR/src/utils/mms_quoted_printable.cpp",
  ]

  include_dirs = [ ":mms_native_config" ]

  configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]

  external_deps = [
    "c_utils:utils",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"MmsApi\"",
    "LOG_DOMAIN = 0xD001F06",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  public_configs = [ ":mms_native_config" ]

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
