# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
SUBSYSTEM_DIR = "../../../../"

config("sms_native_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/sms_mms/utils",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/innerkits",
    "$SUBSYSTEM_DIR/sms_mms:tel_sms_mms_config",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/innerkits/ims",
  ]
}

ohos_source_set("sms_native_source") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  sources = [
    "$SUBSYSTEM_DIR/sms_mms/services/sms/ims_service_interaction/src/ims_sms_callback_proxy.cpp",
    "$SUBSYSTEM_DIR/sms_mms/utils/string_utils.cpp",
    "src/delivery_short_message_callback_stub.cpp",
    "src/send_short_message_callback_stub.cpp",
    "src/short_message.cpp",
    "src/sms_service_death_recipient.cpp",
    "src/sms_service_manager_client.cpp",
    "src/sms_service_proxy.cpp",
  ]

  include_dirs = [ ":sms_native_config" ]

  external_deps = [
    "c_utils:utils",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SmsApi\"",
    "LOG_DOMAIN = 0xD001F06",
  ]

  public_configs = [ ":sms_native_config" ]

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
